--- a/views/beers.ejs
+++ b/views/beers.ejs
@@ -1,6 +1,6 @@
 <% allTheBeers.forEach(beer=> { %>
     <p>
-        <%- beer.image%>
+        <img src="<%- beer.image_url%>" alt="beer image">
     </p>
     <p>
         <%- beer.name%>
