--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
-<div>
+<div class="beerImg">
     <img src="/images/beer.png">
 </div>
-<a href="/beers">Check the Beers!</a>
-<a href="/random-beer">Check a Random Beer</a>
+<div class="buttons">
+    <button class="button1"><a href="/beers">Check the Beers!</a></button>
+    <button class="button2"><a href="/random-beer">Check a Random Beer</a></button>
+</div>
