--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,17 @@
-<div class="beerImg">
+<div class="index">
+    <img src="/images/beer.png" alt="beer pic" style="height: 200px" />
+    <div class="button-div">
+        <a class="button" href="/beers">Check the Beers!</a>
+        <a class="button" href="/random-beer">Check a Random Beer</a>
+    </div>
+</div>
+
+
+
+<!-- <div class="beerImg">
     <img src="/images/beer.png">
 </div>
 <div class="buttons">
     <button class="button1"><a href="/beers">Check the Beers!</a></button>
     <button class="button2"><a href="/random-beer">Check a Random Beer</a></button>
-</div>
+</div> -->
